fix bug uncovered at left edge

--- a/media/css/slider.css
+++ b/media/css/slider.css
@@ -79,7 +79,7 @@ table.slider-top td.slider-edge
 
 .slider-edge-right h2
 {
-    right:0px;
+    right:10px;
 }
 
 table.slider-top td.slider-cell
